plogapp/tests/errors/doubleSortDef.plog
sorts

#s = {a}.
#s = {b}.

attributes

statements

